--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "expo": "~50.0.8",
     "expo-app-loading": "^2.1.1",
     "expo-constants": "~15.4.5",
