--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/database": "^19.0.0",
+    "@react-native-firebase/firestore": "^19.0.0",
     "expo": "~50.0.8",
     "expo-app-loading": "^2.1.1",
     "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.9",
+    "expo-dev-launcher": "3.6.7",
     "expo-font": "^11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
+    "expo-system-ui": "~2.9.3",
+    "firebase": "^10.8.1",
     "formik": "^2.4.5",
     "lottie-react-native": "^6.7.0",
     "nativewind": "^2.0.11",
