--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/auth": "^19.0.0",
     "@react-native-firebase/database": "^19.0.0",
     "@react-native-firebase/firestore": "^19.0.0",
     "expo": "~50.0.8",
